src/SimpleSchema/src/SimpleSchema/Schema/Parse/ANTLR/Grammar/GeneratedCode/SimpleSchemaParser.py
# Generated from C:\Code\v4\Common\SimpleSchema\src\SimpleSchema\src\SimpleSchema\Schema\Parse\ANTLR\Grammar\SimpleSchema.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimpleSchemaParser ( Parser ):

    grammarFileName = "SimpleSchema.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'pass'", "','", "':'", 
                     "'?'", "'*'", "'+'", "'y'", "'Y'", "'yes'", "'Yes'", 
                     "'YES'", "'true'", "'True'", "'TRUE'", "'on'", "'On'", 
                     "'ON'", "'n'", "'N'", "'no'", "'No'", "'NO'", "'false'", 
                     "'False'", "'FALSE'", "'off'", "'Off'", "'OFF'", "'None'", 
                     "'as'", "'='", "'->'", "'.'", "'::'", "'::item'", "'|'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'['", "']'", "'from'", "'import'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NEWLINE", 
                      "NESTED_NEWLINE", "LINE_CONTINUATION", "LPAREN", "RPAREN", 
                      "LBRACK", "RBRACK", "INCLUDE_FROM", "INCLUDE_IMPORT", 
                      "INCLUDE_FILENAME", "MULTI_LINE_COMMENT", "SINGLE_LINE_COMMENT", 
                      "HORIZONTAL_WHITESPACE", "NUMBER", "INTEGER", "IDENTIFIER", 
                      "DOUBLE_QUOTE_STRING", "UNTERMINATED_DOUBLE_QUOTE_STRING", 
                      "SINGLE_QUOTE_STRING", "UNTERMINATED_SINGLE_QUOTE_STRING", 
                      "TRIPLE_DOUBLE_QUOTE_STRING", "UNTERMINATED_TRIPLE_DOUBLE_QUOTE_STRING", 
                      "TRIPLE_SINGLE_QUOTE_STRING", "UNTERMINATED_TRIPLE_SINGLE_QUOTE_STRING", 
                      "INDENT", "DEDENT" ]

    RULE_entry_point__ = 0
    RULE_identifier = 1
    RULE_metadata_clause = 2
    RULE_metadata_clause_single_line__ = 3
    RULE_metadata_clause_multi_line__ = 4
    RULE_metadata_clause_item = 5
    RULE_cardinality_clause = 6
    RULE_cardinality_clause_optional = 7
    RULE_cardinality_clause_zero_or_more = 8
    RULE_cardinality_clause_one_or_more = 9
    RULE_cardinality_clause_fixed = 10
    RULE_cardinality_clause_range__ = 11
    RULE_expression__ = 12
    RULE_number_expression = 13
    RULE_integer_expression = 14
    RULE_true_expression = 15
    RULE_false_expression = 16
    RULE_none_expression = 17
    RULE_string_expression = 18
    RULE_list_expression = 19
    RULE_tuple_expression = 20
    RULE_tuple_expression_single_item__ = 21
    RULE_tuple_expression_multi_item__ = 22
    RULE_header_statement__ = 23
    RULE_include_statement = 24
    RULE_include_statement_filename = 25
    RULE_include_statement_star = 26
    RULE_include_statement_items__ = 27
    RULE_include_statement_grouped_items__ = 28
    RULE_include_statement_element = 29
    RULE_body_statement__ = 30
    RULE_extension_statement = 31
    RULE_extension_statement_positional_args = 32
    RULE_extension_statement_keyword_args = 33
    RULE_extension_statement_keyword_arg = 34
    RULE_parse_item_statement = 35
    RULE_parse_structure_statement = 36
    RULE_parse_structure_statement_base_single__ = 37
    RULE_parse_structure_statement_base_multi__ = 38
    RULE_parse_structure_simplified_statement = 39
    RULE_parse_type = 40
    RULE_parse_identifier_type = 41
    RULE_parse_identifier_type_global = 42
    RULE_parse_identifier_type_item = 43
    RULE_parse_tuple_type = 44
    RULE_parse_tuple_type_single_item__ = 45
    RULE_parse_tuple_type_multi_item__ = 46
    RULE_parse_variant_type = 47

    ruleNames =  [ "entry_point__", "identifier", "metadata_clause", "metadata_clause_single_line__", 
                   "metadata_clause_multi_line__", "metadata_clause_item", 
                   "cardinality_clause", "cardinality_clause_optional", 
                   "cardinality_clause_zero_or_more", "cardinality_clause_one_or_more", 
                   "cardinality_clause_fixed", "cardinality_clause_range__", 
                   "expression__", "number_expression", "integer_expression", 
                   "true_expression", "false_expression", "none_expression", 
                   "string_expression", "list_expression", "tuple_expression", 
                   "tuple_expression_single_item__", "tuple_expression_multi_item__", 
                   "header_statement__", "include_statement", "include_statement_filename", 
                   "include_statement_star", "include_statement_items__", 
                   "include_statement_grouped_items__", "include_statement_element", 
                   "body_statement__", "extension_statement", "extension_statement_positional_args", 
                   "extension_statement_keyword_args", "extension_statement_keyword_arg", 
                   "parse_item_statement", "parse_structure_statement", 
                   "parse_structure_statement_base_single__", "parse_structure_statement_base_multi__", 
                   "parse_structure_simplified_statement", "parse_type", 
                   "parse_identifier_type", "parse_identifier_type_global", 
                   "parse_identifier_type_item", "parse_tuple_type", "parse_tuple_type_single_item__", 
                   "parse_tuple_type_multi_item__", "parse_variant_type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    NEWLINE=39
    NESTED_NEWLINE=40
    LINE_CONTINUATION=41
    LPAREN=42
    RPAREN=43
    LBRACK=44
    RBRACK=45
    INCLUDE_FROM=46
    INCLUDE_IMPORT=47
    INCLUDE_FILENAME=48
    MULTI_LINE_COMMENT=49
    SINGLE_LINE_COMMENT=50
    HORIZONTAL_WHITESPACE=51
    NUMBER=52
    INTEGER=53
    IDENTIFIER=54
    DOUBLE_QUOTE_STRING=55
    UNTERMINATED_DOUBLE_QUOTE_STRING=56
    SINGLE_QUOTE_STRING=57
    UNTERMINATED_SINGLE_QUOTE_STRING=58
    TRIPLE_DOUBLE_QUOTE_STRING=59
    UNTERMINATED_TRIPLE_DOUBLE_QUOTE_STRING=60
    TRIPLE_SINGLE_QUOTE_STRING=61
    UNTERMINATED_TRIPLE_SINGLE_QUOTE_STRING=62
    INDENT=63
    DEDENT=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Entry_point__Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SimpleSchemaParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleSchemaParser.NEWLINE)
            else:
                return self.getToken(SimpleSchemaParser.NEWLINE, i)

        def header_statement__(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSchemaParser.Header_statement__Context)
            else:
                return self.getTypedRuleContext(SimpleSchemaParser.Header_statement__Context,i)


        def body_statement__(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSchemaParser.Body_statement__Context)
            else:
                return self.getTypedRuleContext(SimpleSchemaParser.Body_statement__Context,i)


        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_entry_point__

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntry_point__" ):
                return visitor.visitEntry_point__(self)
            else:
                return visitor.visitChildren(self)




    def entry_point__(self):

        localctx = SimpleSchemaParser.Entry_point__Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_entry_point__)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39:
                self.state = 96
                self.match(SimpleSchemaParser.NEWLINE)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46 or _la==47:
                self.state = 102
                self.header_statement__()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==54:
                self.state = 108
                self.body_statement__()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(SimpleSchemaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SimpleSchemaParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_identifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = SimpleSchemaParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(SimpleSchemaParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Metadata_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def metadata_clause_single_line__(self):
            return self.getTypedRuleContext(SimpleSchemaParser.Metadata_clause_single_line__Context,0)


        def metadata_clause_multi_line__(self):
            return self.getTypedRuleContext(SimpleSchemaParser.Metadata_clause_multi_line__Context,0)


        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_metadata_clause

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetadata_clause" ):
                return visitor.visitMetadata_clause(self)
            else:
                return visitor.visitChildren(self)




    def metadata_clause(self):

        localctx = SimpleSchemaParser.Metadata_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_metadata_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(SimpleSchemaParser.T__0)
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 54]:
                self.state = 119
                self.metadata_clause_single_line__()
                pass
            elif token in [63]:
                self.state = 120
                self.metadata_clause_multi_line__()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 123
            self.match(SimpleSchemaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Metadata_clause_single_line__Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def metadata_clause_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSchemaParser.Metadata_clause_itemContext)
            else:
                return self.getTypedRuleContext(SimpleSchemaParser.Metadata_clause_itemContext,i)


        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_metadata_clause_single_line__

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetadata_clause_single_line__" ):
                return visitor.visitMetadata_clause_single_line__(self)
            else:
                return visitor.visitChildren(self)




    def metadata_clause_single_line__(self):

        localctx = SimpleSchemaParser.Metadata_clause_single_line__Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_metadata_clause_single_line__)
        self._la = 0 # Token type
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.match(SimpleSchemaParser.T__2)
                pass
            elif token in [54]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.metadata_clause_item()
                self.state = 131
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 127
                        self.match(SimpleSchemaParser.T__3)
                        self.state = 128
                        self.metadata_clause_item() 
                    self.state = 133
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 134
                    self.match(SimpleSchemaParser.T__3)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Metadata_clause_multi_line__Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INDENT(self):
            return self.getToken(SimpleSchemaParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(SimpleSchemaParser.DEDENT, 0)

        def metadata_clause_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSchemaParser.Metadata_clause_itemContext)
            else:
                return self.getTypedRuleContext(SimpleSchemaParser.Metadata_clause_itemContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleSchemaParser.NEWLINE)
            else:
                return self.getToken(SimpleSchemaParser.NEWLINE, i)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_metadata_clause_multi_line__

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetadata_clause_multi_line__" ):
                return visitor.visitMetadata_clause_multi_line__(self)
            else:
                return visitor.visitChildren(self)




    def metadata_clause_multi_line__(self):

        localctx = SimpleSchemaParser.Metadata_clause_multi_line__Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_metadata_clause_multi_line__)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(SimpleSchemaParser.INDENT)
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.state = 140
                self.match(SimpleSchemaParser.T__2)
                self.state = 142 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 141
                    self.match(SimpleSchemaParser.NEWLINE)
                    self.state = 144 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==39):
                        break

                pass
            elif token in [54]:
                self.state = 152 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 146
                    self.metadata_clause_item()
                    self.state = 148 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 147
                        self.match(SimpleSchemaParser.NEWLINE)
                        self.state = 150 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==39):
                            break

                    self.state = 154 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==54):
                        break

                pass
            else:
                raise NoViableAltException(self)

            self.state = 158
            self.match(SimpleSchemaParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Metadata_clause_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(SimpleSchemaParser.IdentifierContext,0)


        def expression__(self):
            return self.getTypedRuleContext(SimpleSchemaParser.Expression__Context,0)


        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_metadata_clause_item

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetadata_clause_item" ):
                return visitor.visitMetadata_clause_item(self)
            else:
                return visitor.visitChildren(self)




    def metadata_clause_item(self):

        localctx = SimpleSchemaParser.Metadata_clause_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_metadata_clause_item)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.identifier()
            self.state = 161
            self.match(SimpleSchemaParser.T__4)
            self.state = 162
            self.expression__()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cardinality_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cardinality_clause_optional(self):
            return self.getTypedRuleContext(SimpleSchemaParser.Cardinality_clause_optionalContext,0)


        def cardinality_clause_zero_or_more(self):
            return self.getTypedRuleContext(SimpleSchemaParser.Cardinality_clause_zero_or_moreContext,0)


        def cardinality_clause_one_or_more(self):
            return self.getTypedRuleContext(SimpleSchemaParser.Cardinality_clause_one_or_moreContext,0)


        def cardinality_clause_fixed(self):
            return self.getTypedRuleContext(SimpleSchemaParser.Cardinality_clause_fixedContext,0)


        def cardinality_clause_range__(self):
            return self.getTypedRuleContext(SimpleSchemaParser.Cardinality_clause_range__Context,0)


        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_cardinality_clause

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCardinality_clause" ):
                return visitor.visitCardinality_clause(self)
            else:
                return visitor.visitChildren(self)




    def cardinality_clause(self):

        localctx = SimpleSchemaParser.Cardinality_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cardinality_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 164
                self.cardinality_clause_optional()
                pass

            elif la_ == 2:
                self.state = 165
                self.cardinality_clause_zero_or_more()
                pass

            elif la_ == 3:
                self.state = 166
                self.cardinality_clause_one_or_more()
                pass

            elif la_ == 4:
                self.state = 167
                self.cardinality_clause_fixed()
                pass

            elif la_ == 5:
                self.state = 168
                self.cardinality_clause_range__()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cardinality_clause_optionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_cardinality_clause_optional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCardinality_clause_optional" ):
                return visitor.visitCardinality_clause_optional(self)
            else:
                return visitor.visitChildren(self)




    def cardinality_clause_optional(self):

        localctx = SimpleSchemaParser.Cardinality_clause_optionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cardinality_clause_optional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(SimpleSchemaParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cardinality_clause_zero_or_moreContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_cardinality_clause_zero_or_more

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCardinality_clause_zero_or_more" ):
                return visitor.visitCardinality_clause_zero_or_more(self)
            else:
                return visitor.visitChildren(self)




    def cardinality_clause_zero_or_more(self):

        localctx = SimpleSchemaParser.Cardinality_clause_zero_or_moreContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_cardinality_clause_zero_or_more)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(SimpleSchemaParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
